--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
 
 <h1>凰</h1>
 <p>12345678</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/10t-FGfPsqo" frameborder="0" allowfullscreen></iframe>
+<!-- Facebook Badge START --><a href="https://www.facebook.com/people/&#x9f94;&#x9038;&#x51f0;/100003972497636" title="&#x9f94;&#x9038;&#x51f0;" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" target="_TOP">龔逸凰</a><br /><a href="https://www.facebook.com/people/&#x9f94;&#x9038;&#x51f0;/100003972497636" title="&#x9f94;&#x9038;&#x51f0;" target="_TOP"><img class="img" src="https://badge.facebook.com/badge/100003972497636.797.1944082254.png" style="border: 0px;" alt="" /></a><br /><a href="https://www.facebook.com/badges/" title="&#x5efa;&#x7acb;&#x4f60;&#x7684;&#x540d;&#x7247;&#x8cbc;&#xff01;" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" target="_TOP">建立你的名片貼</a><!-- Facebook Badge END -->
 
+<!-- 將這個標記放在標頭中，或放在內文結尾標記前面。 -->
+<script src="https://apis.google.com/js/platform.js" async defer>
+  {lang: 'zh-TW'}
+</script>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v2.3";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<!-- 在您要顯示「小工具」的位置放上這個標記。 -->
+<div class="g-person" data-href="https://plus.google.com/107911248596020910090" data-rel="author"></div>
 </body>
 </html>
